# hand-eye-calibration

./: .gitignore  README.md  ScreenCamera_2025-10-20-21-30-17.json  intrin_401.txt  intrin_715.txt  pyproject.toml
data/: 401.pcd  715.pcd  792.pcd
examples/: calib_eye_to_hand.py  calib_realsense_kinova.py  calib_zed_kinova.py  check_transform_by_pc.py  compare.py  compare_pointclouds.py  debug_via_pointcloud.py  get_single_pointcloud.py  get_stereo_input.py  merge_pointcloud.py  run_camera.py  run_camera_marker.py  run_hand_eye_calib.py  run_rs_camera.py  run_zed_calib.py  run_zed_camera.py  test.py  test_manual_offset.py  test_via_click_and_go.py  test_via_predefined.py
main_fast/: depth_meter.npy
main_regular/: depth_meter.npy
side_fast/: depth_meter.npy
side_regular/: depth_meter.npy
src/hand_eye_calibration/: __init__.py  calibration.py  calibration_new.py  camera_interface.py  config.py  eye_to_hand_calibration.py  pixel_selection.py  point_cloud.py  pointcloud_merging.py  robot.py  robot_interface.py  utils.py
src/hand_eye_calibration/utils/: calibration.py  control.py  io.py  pointcloud.py
