[project]
name = "hand-eye-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xukristenyan", email = "xkyan3@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "tabulate>=0.9.0",
    "open3d",
    "roboenv",
    "kortex-api",
    "torchvision>=0.24.0",
    "opencv-contrib-python>=4.11.0.86",
    "zed-toolbox"
]

[tool.uv.sources]
kortex-api = { git = "https://github.com/kaolab-research/patched-kinova-kortex-api.git" }
roboenv = { path = "../robo-env", editable = true }
hand-eye-calibration = { workspace = true }
zed-toolbox = { path = "../zed-toolbox", editable = true }

[project.scripts]
hand-eye-calibration = "hand_eye_calibration:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "hand-eye-calibration",
]

[tool.setuptools.packages.find]
where = ["src"]
