[project]
name = "hand-eye-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xukristenyan", email = "xkyan3@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "tabulate>=0.9.0",
    "open3d",
    "torchvision>=0.24.0",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
hand-eye-calibration = "hand_eye_calibration:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
